service.yaml
apiVersion: v1
kind: Service
metadata:
  name: im-a-pod
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 5000
  selector:
    app: im-a-pod
  type: NodePort
