ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: argo-tunnel
  name: im-a-pod
spec:
  rules:
  - host: im-a-pod.stackpoint.us
    http:
      paths:
      - backend:
          serviceName: im-a-pod
          servicePort: 80
        path: /
status:
  loadBalancer: {}
